# dead-reflection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.cursor/rules/backend-layers/: RULE.md
.cursor/rules/frontend-voice/: RULE.md
.cursor/rules/project-spec/: RULE.md
alembic/: env.py
alembic/versions/: 0001_memory_vector_tables.py  0002_memory_id_uuid.py  0003_memory_user_avatar_uuid.py  0004_auth_users_sessions.py  0005_auth_user_name.py  0006_avatars_and_active_avatar.py  0007_conversations.py  0008_users_is_admin.py  0009_entities.py  0010_mcp_tokens.py  0011_outbound_audit_log.py  0012_satellite_tokens.py  0013_artifacts.py  0014_artifact_privacy_policies.py  0015_memory_content_tsv.py
apps/web/: next-shim.d.ts  package-lock.json  package.json  react-shim.d.ts  shims.d.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.js  vitest.config.ts
apps/web/app/: layout.tsx  page.test.jsx  page.tsx
apps/web/public/: mic-capture-worklet.js
bench/pgbench/: vector_read.sql
bench/sql/: vector_setup.sql
docker/api/: Dockerfile
docker/ui/: Dockerfile
docs/: local-avatar-ai-stack.md  next-steps.md  reflectionsv2.md  voice-satellite-protocol.md
ollama/: Modelfile.lumina
scripts/: build-calendar-bridge-app.sh  build-catalog-bridge-app.sh  eval_recall.py
src/reflections/: settings.py
src/reflections/admin/: cli.py
src/reflections/api/: __init__.py  exceptions.py  main.py  routers.py
tests/: conftest.py  test_avatars_api.py  test_health.py
tests/api/: __init__.py  test_app_wiring.py  test_exception_handlers.py
tests/artifacts/: test_artifact_entity_links.py  test_artifacts_service.py  test_policies_and_privacy.py
tests/auth/: test_auth_api.py  test_auth_service.py
tests/calendar/: test_calendar_service.py
tests/conversations/: test_conversations_api.py
tests/entities/: test_entities_api.py  test_entities_extraction.py  test_extracted_entities_filter.py
tests/extractors/: test_extractors.py
tests/health/: __init__.py  test_api.py  test_repository.py  test_service.py
tests/mcp/: test_mcp_api.py  test_mcp_scopes.py  test_mcp_service.py  test_private_admin_gate.py
tests/memory/: __init__.py  conftest.py  test_api.py  test_delete_validation.py  test_phase2_endpoints.py  test_repository.py  test_service.py  test_user_only_extraction.py
tests/outbound/: test_outbound_service.py
tests/vault/: test_vault_render_parse.py
tests/voice/: __init__.py  test_api.py  test_greet_api.py  test_http_service_greet_tts_failure.py  test_replay_context.py  test_repository.py  test_service.py  test_voices_api.py
(+120 files in other folders)
